--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "core-js": "^3.6.5",
     "echarts": "^5.3.2",
     "element-ui": "^2.15.2",
+    "kuan-vue-flip-clock": "^1.0.1",
     "moment": "^2.29.3",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
